Adding server info rpc
