# internal/minio/models/generic.go
@@ -1,1 +1,8 @@
 package models
+
+type Endpoint struct {
+	Endpoint        string
+	AccessKeyID     string
+	SecretAccessKey string
+	SSL             bool
+}
